Fixes line-height and spacing of/around H3 (#9)

--- a/src/site/assets/styles/base/spacing.css
+++ b/src/site/assets/styles/base/spacing.css
@@ -17,7 +17,7 @@ blockquote {
   margin-bottom: var(--blocks-space-around);
 }
 
-h1, h2 {
+h1, h2, h3 {
   margin-top: var(--headings-space-before);
 }
 
@@ -31,7 +31,7 @@ blockquote *:last-child {
   margin-bottom: 0;
 }
 
-h3, h4, h5, h6,
+h4, h5, h6,
 p, ul, ol {
   margin-top: 0;
 }
