--- a/src/site/assets/styles/base/typography.css
+++ b/src/site/assets/styles/base/typography.css
@@ -90,7 +90,6 @@ h3 {
   font-size: var(--h3-font-size);
   font-weight: var(--h3-font-weight);
   text-transform: uppercase;
-  line-height: var( --line-height-double);
 }
 
 h4 {
